@@ -35,15 +35,18 @@ like(
     'build aborted',
 );
 
+# allow for dev releases - Module::Metadata includes _, but $VERSION does not.
+my $TM_VERSION = join '_?', split //, $Test::More::VERSION;
+
 cmp_deeply(
     $tzil->log_messages,
     superbagof(
         '[EnsurePrereqsInstalled] checking that all authordeps are satisfied...',
         '[EnsurePrereqsInstalled] checking that all prereqs are satisfied...',
         '[EnsurePrereqsInstalled] checking x_breaks...',
-        "[EnsurePrereqsInstalled] Breakages found:
-[EnsurePrereqsInstalled]     Installed version ($Test::More::VERSION) of Test::More is in range '<= 200.0'
-[EnsurePrereqsInstalled] To remedy, do:  cpanm Test::More"
+        re(qr/^\Q[EnsurePrereqsInstalled] Breakages found:
+[EnsurePrereqsInstalled]     Installed version (\E$TM_VERSION\Q) of Test::More is in range '<= 200.0'
+[EnsurePrereqsInstalled] To remedy, do:  cpanm Test::More\E$/ms),
     ),
     'build was aborted: x_breaks entries were checked',
 ) or diag 'got log messages: ', explain $tzil->log_messages;
